--- a/sis/src/templates/root_files/jest.config.js.ejs
+++ b/sis/src/templates/root_files/jest.config.js.ejs
@@ -44,6 +44,7 @@ module.exports = {
   // An object that configures minimum threshold enforcement for coverage results
   coverageThreshold: {
     global: {
+      branches: 100,
       functions: 100,
       lines: 100,
       statements: 100
@@ -173,7 +174,7 @@ module.exports = {
 
   // A map from regular expressions to paths to transformers
   transform: {
-    '.(js|jsx|ts|tsx)': '@sucrase/jest-plugin'
+    '.(js|jsx|ts|tsx)': 'babel-jest'
   }
 
   // An array of regexp pattern strings that are matched against all source file paths, matched files will skip transformation
