feature(structure): add cluster

--- a/sis/src/templates/root_files/.eslintrc.js.ejs
+++ b/sis/src/templates/root_files/.eslintrc.js.ejs
@@ -29,6 +29,7 @@ module.exports = {
         groups: ['module', '/^@shared/', ['parent', 'sibling', 'index']],
         alphabetize: { order: 'asc', ignoreCase: true }
       }
-    ]
+    ],
+    'no-plusplus': [2, { allowForLoopAfterthoughts: true }]
   }
 };
