--- a/sis/src/templates/server.js.ejs
+++ b/sis/src/templates/server.js.ejs
@@ -1,3 +1,12 @@
+import cluster from 'cluster';
+import os from 'os';
+
 import app from './app';
 
-app.listen(process.env.PORT || 3333);
+if (cluster.isMaster) {
+  for (let index = 0; index < os.cpus().length; index++) {
+    cluster.fork();
+  }
+} else {
+  app.listen(process.env.PORT || 3333);
+}
