fix(Dockerfile): fix dockerfile and readme

--- a/sis/src/templates/root_files/README.md.ejs
+++ b/sis/src/templates/root_files/README.md.ejs
@@ -16,8 +16,17 @@ npm run dev
 
 `npm test`
 
-## Project Structure
 
+### Docker
+```
+docker build -t template/node-web-app .
+```
+
+```
+docker run -p 3333:3333 -d template/node-web-app
+```
+
+## Project Structure
 ```
 |-- src
     |-- app
